--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
     <title>Portfolio</title>
@@ -17,16 +18,22 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <a href="#" class="brand-logo">My Portfolio</a>
+                    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <ul class="right hide-on-med-and-down" id="navList">
                         <li><a href="#landing">Home</a></li>
                         <li><a href="#intro">About Me</a></li>
                         <li><a href="#work">Projects</a></li>
-                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
+
+    <ul class="sidenav" id="mobile-demo">
+        <li><a href="#landing">Home</a></li>
+        <li><a href="#intro">About Me</a></li>
+        <li><a href="#work">Projects</a></li>
+    </ul>
 
 <!-- Landing Screen -->
 <div class="section" id="landing">
@@ -43,10 +50,10 @@
             <i class="fa fa-globe"></i>
         </a>
         <ul>
-            <li><a class="btn-floating  blue darken-4"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="btn-floating cyan lighten-1"><i class="fa fa-twitter"></i></a></li>
-            <li><a class="btn-floating grey darken-3"> <i class="fa fa-github"></i></a></li>
-            <li><a class="btn-floating blue-grey lighten-1"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://www.facebook.com/mitchell.t.waite" class="btn-floating blue darken-4"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="mailto:mitchtwaite@gmail.com" class="btn-floating blue-grey lighten-1"><i class="far fa-envelope"></i></a></li>
+            <li><a href="https://github.com/elchaparrito1" class="btn-floating grey darken-3"> <i class="fab fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/mitchell-waite-18b445a3/" class="btn-floating cyan lighten-1"><i class="fab fa-linkedin"></i></a></li>
         </ul>
     </div>
 
@@ -85,8 +92,7 @@
             <div class="row">
                 <div class="col s12 center white-text">
                     <h1><b>QUOTE</b></h1>
-                    <h4 >"I don't think much of a man who is not wiser today than he was yesterday."
-                            Abraham Lincoln
+                    <h4 >Compare yourself to who you were yesterday, not to who someone else is today.
                     </h4>
                 </div>
             </div>
@@ -176,6 +182,42 @@
             </div>
         </div>
     </div>
+
+     <!-- Modal Trigger -->
+     <!-- <li><button class="waves-effect waves-light btn modal-trigger" data-target="modal1">Modal</button></li> -->
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Add an Image</h4>
+
+      <div class="row">
+        <form class="col s12">
+          <div class="row modal-form-row">
+            <div class="input-field col s12">
+              <input id="image_url" type="text" class="validate">
+              <label for="image_url">Image URL</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="image_title" type="text" class="validate">
+              <label for="image_title">Title</label>
+            </div>
+          </div>       
+          <div class="row">
+            <div class="input-field col s12">
+              <textarea id="image_description" type="text" class="materialize-textarea validate"></textarea>
+              <label for="image_description">Description</label>
+            </div>
+          </div>             
+        </form>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <a class=" modal-action modal-close waves-effect waves-green btn-flat">Submit</a>
+    </div>
+  </div>
 
     <footer class="section page-footer black">
             <div class="container center-align">
